[package]
name = "repeval"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1.4.0"
git2 = "0.20.2"
regex = "1.12.2"
serde = { version = "1", features = ["derive"] }
shell-words = "1.1.0"
tempfile = "3.23.0"
time = "0.3.44"
tmpfile = "0.0.3"
toml = "0.9"
